--- a/Programador front-end/code-together/ecommerce/css/styless.css
+++ b/Programador front-end/code-together/ecommerce/css/styless.css
@@ -45,7 +45,7 @@ body {
 
 /* Combinador descendente: Estilo de los enlaces de navegación */
 header nav a {
-    color: white;
+    color: rgb(150, 150, 150);
     text-decoration: none;
     margin: 0 15px;
     padding: 5px;
@@ -66,7 +66,7 @@ header nav a:hover {
 
 /* Pseudoclase de Interacción: :visited en todos los enlaces */
 a:visited {
-    color: #c0c0c0;
+    color: d6ff00;
     /* Gris muy claro para indicar que ya fue visitado */
 }
 
